# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import ordersRouter from "./orders";
 import faqRouter from "./faq";
 import servicesRouter from "./services";
 import adminRouter from "./admin";
+import siteSettingsRouter from "./site-settings";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use("/orders", ordersRouter);
 router.use("/faq", faqRouter);
 router.use("/services", servicesRouter);
 router.use("/admin", adminRouter);
+router.use("/site-settings", siteSettingsRouter);
 
 export default router;
